src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "DM Sans", sans-serif !important;
  font-style: normal;
  scroll-behavior: smooth;
}

html {
  scroll-behavior: smooth;  
}

.fix-bg { 
  
  background-image: url('../src/assets/nnnoise.svg');
  
}

.Ellipse1 {
  position: absolute;
  top: 0;
  left: 0;
  animation: moveEllipse1 20s linear infinite, changeColor 20s linear infinite;
  width: 20rem;
  height: 20rem;
  border-radius: 250px;
  /* background-color: rgb(0 204 151 / 24%); */
  filter: blur(200px);
  z-index: 1;
}

.Ellipse2 {
  position: absolute;
  top: 0;
  right: 0;
  width: 20rem;
  height: 20rem;
  border-radius: 250px;
  /* background-color: rgb(255 117 156 / 24%); */
  filter: blur(200px);
  z-index: 1;
  animation: moveEllipse2 20s linear infinite, changeColor 20s linear infinite;
}

@keyframes moveEllipse1 {
  0% {
      top: 0;
      left: 0;
  }

  25% {
      top: 0;
      left: 100%;
      transform: translateX(-100%);
  }

  50% {
      top: 100%;
      left: 100%;
      transform: translate(-100%, -100%);
  }

  75% {
      top: 100%;
      left: 0;
      transform: translateY(-100%);
  }

  100% {
      top: 0;
      left: 0;
  }
}

@keyframes changeColor {

  0%,
  100% {
      background-color: rgb(3, 245, 48);
      filter: blur(16rem);
  }

  20% {
      background-color: rgba(54, 6, 243, 0.8);
      filter: blur(15rem);
  }

  40% {
      background-color: rgba(0, 204, 255, 0.8);
      filter: blur(12rem);
  }

  60% {
      background-color: rgba(240, 9, 113, 0.8);
      filter: blur(15rem);
  }

  80% {
      background-color: rgb(4, 251, 247);
      filter: blur(16rem);
  }
}

@keyframes moveEllipse2 {
  0% {
      top: 100%;
      right: 0;
      transform: translateY(-100%);
  }

  25% {
      top: 100%;
      right: 100%;
      transform: translate(100%, -100%);
  }

  50% {
      top: 0;
      right: 100%;
      transform: translateX(100%);
  }

  75% {
      top: 0;
      right: 0;
  }

  100% {
      top: 100%;
      right: 0;
      transform: translateY(-100%);
  }
}

/* download button cssss.......................................................................... */

.btn-slide:hover span.circle {
  left: 100%;
  margin-left: -53px;
  background-color: #fdfdfd;
}

.btn-slide:hover span.circle .download-svg {
  fill: #FF759C;
}



.btn-slide:hover span.title {
  text-align: center;
  opacity: 0;
}

.btn-slide:hover span.title-hover {
  opacity: 1;
  
  text-align: center;
}

.btn-slide span.circle {
  display: block;
  background-color: #FF759C;
  position: absolute;
  margin: 5px;
  line-height: 42px;
  height: 48px;
  width: 48px;
  top: 1px;
  left: 0;
  transition: .5s;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.btn-slide span.title,
.btn-slide span.title-hover {
  position: absolute;
  top: 10px;
  text-align: center;
  margin: 0 auto;
  transition: .5s;
  color: var(--1, #FFF);
  font-size: 16px;
  font-weight: 800;
}

.btn-slide span.title,
.btn-slide span.title-hover {
  left: 80px;
}

.btn-slide span.title-hover {
  left: 80px;
  opacity: 0;
}


.rightpane {
  scrollbar-color: rgba(243, 192, 237, 0.995) rgba(65, 65, 65, 0);
  scrollbar-width: thin;
}

